<resources>
    <string name="app_name">Next Drink</string>
    <string name="add_a_deal">Add A Deal</string>
    <string name="mo">MO</string>
    <string name="tu">TU</string>
    <string name="we">WE</string>
    <string name="su">SU</string>
    <string name="sa">SA</string>
    <string name="fr">FR</string>
    <string name="th">TH</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="bar_or_restaurant">Bar or restaurant</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="all_day">All day</string>
    <string name="now">NOW</string>
    <string name="reset_filters">RESET FILTERS</string>
    <string name="before_end_time">Before %1$s</string>
    <string name="after_start_time">After %1$s</string>
    <string name="report_inaccuracy">Report Inaccuracy</string>
    <string name="report_deal_description_hint">Description (e.g. deal no longer exists, deal ends at 7pm, etc.)</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="report_reviewed_shortly">Thanks! Your report will reviewed shortly</string>
    <string name="add_deal_prompt">Know a good deal? Add it to the map by tapping the plus icon in the top right</string>
    <string name="no_deals_found">No deals found :(</string>
    <string name="map">Map</string>
    <string name="website">Website</string>

</resources>
