<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:orientation="horizontal"
    tools:layout_width="match_parent"
    tools:layout_height="wrap_content"
    tools:parentTag="LinearLayout"
    >

    <TextView
        android:id="@+id/day_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now"
        style="@style/DayOfWeek"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/day0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mo"
        style="@style/DayOfWeek"
        />
    <TextView
        android:id="@+id/day1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tu"
        style="@style/DayOfWeek"
        />
    <TextView
        android:id="@+id/day2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we"
        style="@style/DayOfWeek"
        />
    <TextView
        android:id="@+id/day3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/th"
        style="@style/DayOfWeek"
        />
    <TextView
        android:id="@+id/day4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fr"
        style="@style/DayOfWeek"
        />
    <TextView
        android:id="@+id/day5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sa"
        style="@style/DayOfWeek"
        />
    <TextView
        android:id="@+id/day6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/su"
        style="@style/DayOfWeek"
        />

</merge>