<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout_width="match_parent"
    tools:layout_height="match_parent"
    tools:parentTag="FrameLayout"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_rectangle_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_deal"
                style="@style/DialogTitle"
                />

            <fragment
              android:id="@+id/place_autocomplete_fragment"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
              />

            <com.tbd.app.DayOfWeekPicker
                android:id="@+id/deal_day_of_week_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />

            <CheckBox
                android:id="@+id/all_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="All Day"
                />

            <LinearLayout
                android:id="@+id/time_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                tools:visibility="visible"
                >
                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textSize="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/dark_grey"
                    />
                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textSize="16dp"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/deal_description"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description (e.g. $3.50 domestic pints)"
                android:imeOptions="actionDone"
                android:singleLine="true"
                />

            <com.tbd.app.TagView
                android:id="@+id/add_deal_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:rowSpacing="8dp"
                app:childSpacing="auto"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/submit_deal"
                android:text="@string/submit"
                android:layout_gravity="end"
                style="@style/Button"
                android:gravity="start"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                />

        </LinearLayout>
    </FrameLayout>
</merge>